Stored Procedure Parameters

--- a/IMDB_Project/IMDB_Project.csproj
+++ b/IMDB_Project/IMDB_Project.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Data\Conexion.cs" />
     <Compile Include="Data\D_Reviews.cs" />
+    <Compile Include="Entities\E_Movies.cs" />
     <Compile Include="Entities\E_Reviews.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
