--- a/IMDB_Project/IMDB_Project.csproj
+++ b/IMDB_Project/IMDB_Project.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Data\Conexion.cs" />
     <Compile Include="Data\D_Movies.cs" />
     <Compile Include="Data\D_Reviews.cs" />
+    <Compile Include="Data\D_Users.cs" />
     <Compile Include="Entities\E_Movies.cs" />
     <Compile Include="Entities\E_Reviews.cs" />
     <Compile Include="Form1.cs">
